@@ -1,6 +1,6 @@
 entry: var params, 1 locals, 0 temps
 1
-1
+2
 2
 functions are not false
-nil is not false
+nil is false
